--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,10 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-cars:
-  name: Машины
+one:
+  name: News
 
-real_estate:
-  name: Недвижимость
-
-electronics:
-  name: Электроника
+two:
+  name: Sports
