--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,31 @@
-# Omakase Ruby styling for Rails
-inherit_gem: { rubocop-rails-omakase: rubocop.yml }
+require:
+  - rubocop-rails
 
-# Overwrite or add rules to create your own house style
-#
-# # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
-# Layout/SpaceInsideArrayLiteralBrackets:
-#   Enabled: false
+AllCops:
+  TargetRailsVersion: 7.1
+  NewCops: enable
+
+Style/Documentation:
+  Enabled: false
+Metrics/BlockLength:
+  Max: 30
+
+Layout/LineLength:
+  Exclude:
+    - 'config/initializers/simple_form.rb'
+    - 'config/initializers/simple_form_bootstrap.rb'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'config/environments/development.rb'
+    - 'config/initializers/simple_form_bootstrap.rb'
+    - 'config/routes.rb'
+
+Metrics/MethodLength:
+  Exclude:
+    - 'db/migrate/20250525153849_create_active_storage_tables.active_storage.rb'
+
+Metrics/AbcSize:
+  Exclude:
+    - 'db/migrate/20250525153849_create_active_storage_tables.active_storage.rb'
+    - 'app/controllers/web/auth_controller.rb'
