--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hotwired/turbo": "^8.0.13",
     "@hotwired/turbo-rails": "^8.0.16",
     "@popperjs/core": "^2.11.8",
+    "@rails/ujs": "^7.1.3-4",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
